packages/compiler/tests/fixtures/invalid/complex-expression.svelte
<script>
  let a = 1;
  let b = 2;
</script>
<text>{new Map(a, b)}</text>
